tests/errors/multifile/include/skip_file/lib1.h
// Header with no *.h extension



int very_important_var = 0;


void first_file_func();
#include "lib2.h"

zxcvbnm

fawSGzdhfxgcjhv

ngxzjy
